[package]
name = "calc"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8.5"
printpdf = "0.7.0"
lazy_static = "1.4.0"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
